make read interval configurable

--- a/station/config.json.example
+++ b/station/config.json.example
@@ -1,7 +1,8 @@
 {
     "station": {
         "ip": "",
-        "name": ""
+        "name": "",
+        "readInterval": 0
     },
     "database": {
         "name": "",
